--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3.1'
 services:
+  web:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - PostgreSQL
   PostgreSQL:
     hostname: postgres
     image: postgres
