updated postgres url

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ ktor:
   development: true
 
 postgres:
-  url: "jdbc:postgresql://postgres:5432/expense_manager"
+  url: "jdbc:postgres://postgres:5432/expense_manager"
   user: "postgres"
   password: "psql"
 
