--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ ktor:
   development: true
 
 postgres:
-  url: "jdbc:postgres://${db.USERNAME}:${db.PASSWORD}@${db.HOSTNAME}:${db.PORT}/${db.DATABASE}"
-  user: "${db.USERNAME}"
-  password: "${db.PASSWORD}"
+  url: "jdbc:postgres://${USERNAME}:${PASSWORD}@${HOSTNAME}:${PORT}/${DATABASE}"
+  user: "${USERNAME}"
+  password: "${PASSWORD}"
 
 jwt:
   secret: "expense-manager-jwt-sec"
